[package]
name = "bitvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc = "0.15.0"
bitcoin = { version = "0.30.0", features = ["bitcoinconsensus"] }
secp256k1 = { version = "0.27.0", features = ["rand-std"] }
sqlite = "0.30.4"
